[gd_scene load_steps=9 format=3 uid="uid://q5u8iguyuuf"]

[ext_resource type="Script" path="res://personality_result.gd" id="1_xi0fg"]
[ext_resource type="Texture2D" uid="uid://dr36u3f75w23x" path="res://images and assets/word_bg-1.png" id="2_0hi6m"]
[ext_resource type="Texture2D" uid="uid://bgd01hphwuy8l" path="res://images and assets/warrior_emblems_choice.png" id="2_fgwgl"]
[ext_resource type="Texture2D" uid="uid://d3dh0vvwp5cca" path="res://images and assets/hunter_emblems_choice.png" id="3_anenh"]
[ext_resource type="Texture2D" uid="uid://cwnp6qumls3jw" path="res://images and assets/simpleBox.png" id="3_avm24"]
[ext_resource type="Texture2D" uid="uid://dh707vyutr0a5" path="res://images and assets/mage_emblems_choice.png" id="4_lk5op"]
[ext_resource type="Texture2D" uid="uid://b16lkbhl00u24" path="res://images and assets/priest_emblems_choice.png" id="5_6vx10"]
[ext_resource type="Theme" uid="uid://bjj27hnebf7xb" path="res://materials/wordzardryTheme.tres" id="8_x02m0"]

[node name="mainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xi0fg")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0hi6m")
expand_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="simpleBox" type="Sprite2D" parent="Control"]
position = Vector2(406, 324)
scale = Vector2(1.06836, 1.11182)
texture = ExtResource("3_avm24")

[node name="mainContainer" type="VBoxContainer" parent="Control/simpleBox"]
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.027
anchor_right = 0.983
anchor_bottom = 0.968
offset_left = -703.14
offset_top = -411.221
offset_right = -704.081
offset_bottom = -362.664

[node name="emblemsContainer" type="HBoxContainer" parent="Control/simpleBox/mainContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 180

[node name="warriorEmblem" type="TextureButton" parent="Control/simpleBox/mainContainer/emblemsContainer"]
layout_mode = 2
texture_normal = ExtResource("2_fgwgl")

[node name="hunterEmblem" type="TextureButton" parent="Control/simpleBox/mainContainer/emblemsContainer"]
layout_mode = 2
texture_normal = ExtResource("3_anenh")

[node name="mageEmblem" type="TextureButton" parent="Control/simpleBox/mainContainer/emblemsContainer"]
layout_mode = 2
texture_normal = ExtResource("4_lk5op")

[node name="priestEmblem" type="TextureButton" parent="Control/simpleBox/mainContainer/emblemsContainer"]
layout_mode = 2
texture_normal = ExtResource("5_6vx10")

[node name="classInfoContainer" type="HBoxContainer" parent="Control/simpleBox/mainContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="classImage" type="TextureRect" parent="Control/simpleBox/mainContainer/classInfoContainer"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
expand_mode = 1

[node name="descriptionContainer" type="VBoxContainer" parent="Control/simpleBox/mainContainer/classInfoContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3

[node name="classNameLabel" type="Label" parent="Control/simpleBox/mainContainer/classInfoContainer/descriptionContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50

[node name="classStoryLabel" type="Label" parent="Control/simpleBox/mainContainer/classInfoContainer/descriptionContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_font_sizes/font_size = 30
autowrap_mode = 3

[node name="buttonContainer" type="VBoxContainer" parent="Control/simpleBox/mainContainer"]
layout_mode = 2

[node name="confirmButton" type="Button" parent="Control/simpleBox/mainContainer/buttonContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("8_x02m0")
theme_override_font_sizes/font_size = 20
text = "CONFIRM"

[node name="backButton" type="Button" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 37.0
offset_right = 142.0
offset_bottom = 74.0
scale = Vector2(1, 0.997794)
theme = ExtResource("8_x02m0")
text = "BACK"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Control/simpleBox/mainContainer/emblemsContainer/warriorEmblem" to="." method="_on_warrior_emblem_pressed"]
[connection signal="pressed" from="Control/simpleBox/mainContainer/emblemsContainer/hunterEmblem" to="." method="_on_hunter_emblem_pressed"]
[connection signal="pressed" from="Control/simpleBox/mainContainer/emblemsContainer/mageEmblem" to="." method="_on_mage_emblem_pressed"]
[connection signal="pressed" from="Control/simpleBox/mainContainer/emblemsContainer/priestEmblem" to="." method="_on_priest_emblem_pressed"]
[connection signal="pressed" from="Control/simpleBox/mainContainer/buttonContainer/confirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_Back_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
